# snapshot_service

./: .gitignore  README.md  interactive_set_up.py  pyproject.toml  testing.py
soql/: acc.soql  cred_hx.soql  enr.soql  lic.soql
src/snapshot_service/: airtable.py  basic_merges.py  config.py  enrollments.py  field_formatters.py  idv.py  reader.py  salesforce.py  storage.py  wingspan.py  writer.py
